fix: footer letter-spacing

--- a/docs/source/assets/styles/layout/_footer.sass
+++ b/docs/source/assets/styles/layout/_footer.sass
@@ -70,6 +70,7 @@ footer.bd-footer
       gap: 16px
       line-height: 1.3
       grid-column: span 2
+      letter-spacing: -0.14px
 
       div
         color: #ffffff
@@ -77,7 +78,6 @@ footer.bd-footer
 
       a
         color: #ffffff99
-        letter-spacing: -0.14px
         width: fit-content
 
         &:hover
@@ -126,6 +126,7 @@ footer.bd-footer
       display: flex
       justify-content: center
       align-items: flex-start
+      letter-spacing: -0.14px
 
       @media (min-width: 768px)
         align-items: flex-end
